insert data and get data from the database

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URI = mongodb+srv://nayimh2015:nayimh2015@cluster0.gnbwcu2.mongodb.net/
+URI = mongodb+srv://nayimh2015:nayimh2015@cluster0.gnbwcu2.mongodb.net/modular
 PORT = 5000
