--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.8",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
+    "pino": "^8.14.1",
+    "pino-pretty": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
