--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.8",
     "dotenv": "^16.1.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
     "pino": "^8.14.1",
